# POGLA

./: CMakeLists.txt  README
src/: main.cc
src/misc/: deg.hh  image.cc  image.hh  matrix4.cc  matrix4.hh  matrix4.hxx  program_parameters.hh  vector3.hh  vector3.hxx  vector4.hh  vector4.hxx
src/parser/: obj_parser.cc  obj_parser.hh  option_parser.cc  option_parser.hh  tga_parser.cc  tga_parser.hh
src/particles/: fireflies_generator.cc  fireflies_generator.hh  fireflies_particle.hh  fireworks_generator.cc  fireworks_generator.hh  generator.cc  generator.hh  particle.hh  snow_generator.cc  snow_generator.hh
src/scene/: scene.cc  scene.hh  scene_builder.cc  scene_builder.hh  scene_data.hh
src/shaders/: basic_fragment_shader.glsl  basic_vertex_shader.glsl  bezier_fragment_shader.glsl  bezier_geometry_shader.glsl  bezier_normals_geometry_shader.glsl  bezier_tess_control_shader.glsl  bezier_tess_evaluation_shader.glsl  bezier_vertex_shader.glsl  fragment_shader.glsl  fragment_shader_only_texture.glsl  particles_fragment_shader.glsl  particles_vertex_shader.glsl  vertex_shader.glsl  vertex_shader_only_texture.glsl
src/utils/: camera.cc  camera.hh  object.cc  object.hh  object_vbo.hh  program.cc  program.hh  texture.cc  texture.hh  vao.cc  vao.hh  vbo.cc  vbo.hh  window.cc  window.hh
textures/: grass.tga  sky.tga
